Added date of resolution in title

--- a/code-of-conduct.tex
+++ b/code-of-conduct.tex
@@ -9,7 +9,7 @@
 \renewcommand*\familydefault{\sfdefault}
 
 \title{\huge\textbf{Verhaltenscodex des CoderDojo Schöneweide}}
-\date{\today}
+\date{Beschlossen im Zukunftsmeeting am 24.08.2022}
 \author{}
 
 \begin{document}
